--- a/Grupo_L-war/src/main/webapp/index.xhtml
+++ b/Grupo_L-war/src/main/webapp/index.xhtml
@@ -8,109 +8,14 @@
 
 <h:head>
 	<title>FLM SECRETARIA</title>
-
-	<style type="text/css">
-#titulo {
-	display: flex;
-	justify-content: center;
-	font-family: Verdana, Geneva, sans-serif;
-	font-size: 36px;
-	font-weight: bold;
-	font-variant: normal;
-	color: #00DFA4;
-	text-transform: uppercase;
-	margin-bottom: 25px;
-	margin-top: 25px;
-}
-
-#pie {
-	display: flex;
-	justify-content: center;
-	padding: 0px;
-	height: auto;
-	width: 850px;
-	margin-top: 0px;
-	margin-right: auto;
-	margin-bottom: 0px;
-	margin-left: auto;
-	position: absolute;
-	left: 0%;
-	right: 0%;
-	bottom: 0px; 
-	margin-bottom: 25px;
-	}
-
-#izquierda{
-	padding-top: 20px;
-	padding-right: 15px;
-	padding-bottom: 20px;
-	padding-left: 15px;
-	margin-left: 25px;
-	background-color: #F7F0F0;
-	border: 3px solid black;
-	float: left;
-	margin-right: 200px;
-	border-radius: 10px;
-	
-}
-
-#centro{
-	display: grid;
-	justify-content: center;
-	border-radius: 10px;
-	width: 600px;
-	background-color: #F7F0F0;
-	border: 3px solid black;
-	float: left;
-	padding-top: 15px;
-	padding-left: 15px;
-	margin: 0 auto;
-	padding-bottom: 15px;
-	
-	
-	}
-#cerrar{
-	border-radius: 10px;
-	margin-right: 25px;
-	margin-left: 25px;
-	background-color: #F7F0F0;
-	border: 3px solid black;
-	float: right;
-	padding: 5px;
-	
-}
-</style>
+	<link rel="stylesheet" type="text/css" href="resources/css/ListadoAlumnos.css"  media="screen" />
 </h:head>
 
 <h:body>
 
-	<h:h1 id="titulo">
+	<h1 class=titulo>
 			FLM-SECRETARIA
-	</h:h1>
+	</h1>
 
-	<div id="izquierda"><b>MIS DATOS </b><br></br><br></br>
-		<a href="" style="text-decoration:none">Leer Encuesta</a><br></br>
-		<a href="" style="text-decoration:none">Leer Asignatura Matricula</a><br></br>
-		<a href="" style="text-decoration:none">Leer Matricula</a><br></br>
-		<a href="" style="text-decoration:none">Leer Titulacion</a><br></br>
-		<a href="" style="text-decoration:none">Leer Usuario</a><br></br>
-		<a href="" style="text-decoration:none">Leer Asignatura</a><br></br>
-		<a href="" style="text-decoration:none">Leer Clase</a><br></br>
-		<a href="" style="text-decoration:none">Leer Expediente</a>
-	</div>
-	
-	<div id="centro">
-		<input type="submit" name="leerEncuesta" value="Rellenar encuesta"/> <br></br> 
-		<input type="submit" name="leerEncuesta" value="Solicitar cambio de grupo"/>
-	</div>
-	
-	<div id="cerrar">
-		<input type="submit" name="leerEncuesta" value="Cerrar sesion"/> <br></br>
-	</div>
-
-
-	<div id="pie"> 
-	Universidad de Málaga · Avda. Cervantes, 2. 29071 MÁLAGA · Tel. 952131000 · info@uma.es	
-	</div>
 </h:body>
 </html>
