--- a/Grupo_L-war/src/main/webapp/IndexAlumno.xhtml
+++ b/Grupo_L-war/src/main/webapp/IndexAlumno.xhtml
@@ -8,112 +8,31 @@
 
 <h:head>
 	<title>FLM SECRETARIA</title>
-
-	<style type="text/css">
-	
-#titulo {
-	display: flex;
-	justify-content: center;
-	font-family: Verdana, Geneva, sans-serif;
-	font-size: 36px;
-	font-weight: bold;
-	font-variant: normal;
-	color: #00DFA4;
-	text-transform: uppercase;
-	margin-bottom: 25px;
-	margin-top: 25px;
-	padding-left:115px;
-}
-
-#pie {
-	display: flex;
-	justify-content: center;
-	padding: 0px;
-	height: auto;
-	width: 850px;
-	margin-top: 0px;
-	margin-right: auto;
-	margin-bottom: 0px;
-	margin-left: auto;
-	position: absolute;
-	left: 0%;
-	right: 0%;
-	bottom: 0px; 
-	margin-bottom: 25px;
-}
-
-#izquierda{
-	padding-top: 20px;
-	padding-right: 15px;
-	padding-bottom: 20px;
-	padding-left: 15px;
-	background-color: #F7F0F0;
-	border: 3px solid black;
-	float: left;
-	margin-left: 25px;
-	border-radius: 10px;	
-}
-
-#centro{
-	text-align: center;
-	border-radius: 10px;
-	width: 600px;
-	background-color: #F7F0F0;
-	border: 3px solid black;
-	padding-top: 20px;
-	padding-bottom: 20px;
-  	margin-left: auto;
-  	margin-right: auto;
-}
-	
-#cerrar{
-	padding: 5px;
-	background-color: #F7F0F0;
-	border: 3px solid black;
-	float: right;
-	margin-right: 25px;
-	margin-top: 25px;
-	border-radius: 10px;
-}
-
-#inicio{
-	padding: 5px;
-	background-color: #F7F0F0;
-	border: 3px solid black;
-	float: left;
-	margin-left: 25px;
-	margin-top: 25px;
-	border-radius: 10px;
-}
-
-</style>
+	<h:outputStylesheet library="css" name="ListadoAlumnos.css"  />
 </h:head>
 
 <h:body>
-	
-	<div id="cerrar">
-		<input type="submit" name="leerEncuesta" value="Cerrar sesion"/>
-	</div>
+	<h:commandButton styleClass="cerrar" value="Cerrar sesion" action="ListadoAlumnos_A.xhtml"/>
 
-	<h:h1 id="titulo"> FLM-SECRETARIA </h:h1>
+	<h1 class="titulo"> FLM-SECRETARIA </h1>
 
-	<div id="izquierda"><b>MIS DATOS </b><br></br><br></br>
-		<a href="" style="text-decoration:none">Leer Encuesta</a><br></br>
-		<a href="" style="text-decoration:none">Leer Asignatura Matricula</a><br></br>
-		<a href="" style="text-decoration:none">Leer Matricula</a><br></br>
-		<a href="" style="text-decoration:none">Leer Titulacion</a><br></br>
-		<a href="" style="text-decoration:none">Leer Usuario</a><br></br>
-		<a href="" style="text-decoration:none">Leer Asignatura</a><br></br>
-		<a href="" style="text-decoration:none">Leer Clase</a><br></br>
-		<a href="" style="text-decoration:none">Leer Expediente</a>
+	<div class ="izquierda"><b>MIS DATOS </b><br></br><br></br>
+		<a href="#" style="text-decoration:none">Leer Encuesta</a><br></br>
+		<a href="#" style="text-decoration:none">Leer Asignatura Matricula</a><br></br>
+		<a href="#" style="text-decoration:none">Leer Matricula</a><br></br>
+		<a href="#" style="text-decoration:none">Leer Titulacion</a><br></br>
+		<a href="#" style="text-decoration:none">Leer Usuario</a><br></br>
+		<a href="#" style="text-decoration:none">Leer Asignatura</a><br></br>
+		<a href="#" style="text-decoration:none">Leer Clase</a><br></br>
+		<a href="#" style="text-decoration:none">Leer Expediente</a>
 	</div>
 	
-	<div id="centro">
+	<div class="centro">
 		<input type="submit" name="leerEncuesta" value="Rellenar encuesta"/> <br></br><br></br>
 		<input type="submit" name="leerEncuesta" value="Solicitar cambio de grupo"/>
 	</div>
 
-	<div id="pie"> 
+	<div class="pie"> 
 		Universidad de Málaga · Avda. Cervantes, 2. 29071 MÁLAGA · Tel. 952131000 · info@uma.es	
 	</div>
 	
