--- a/Grupo_L-war/src/main/webapp/IndexAlumno.xhtml
+++ b/Grupo_L-war/src/main/webapp/IndexAlumno.xhtml
@@ -8,7 +8,7 @@
 
 <h:head>
 	<title>FLM SECRETARIA</title>
-	<h:outputStylesheet library="css" name="ListadoAlumnos.css"  />
+	<h:outputStylesheet library="css" name="Layout.css"  />
 </h:head>
 
 <h:body>
