--- a/Grupo_L-war/src/main/webapp/IndexAlumno.xhtml
+++ b/Grupo_L-war/src/main/webapp/IndexAlumno.xhtml
@@ -12,7 +12,7 @@
 </h:head>
 
 <h:body>
-	<h:commandButton styleClass="cerrar" value="Cerrar sesion" action="ListadoAlumnos_A.xhtml"/>
+	<h:commandButton styleClass="cerrar" value="Cerrar sesion" action="LeerAlumnos.xhtml"/>
 
 	<h1 class="titulo"> FLM-SECRETARIA </h1>
 
