--- a/Grupo_L-war/src/main/webapp/LeerExpediente.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerExpediente.xhtml
@@ -1,124 +1,44 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+<<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+	xmlns:f="http://xmlns.jcp.org/jsf/core">
+
 <h:head>
-	<title>Alumno</title>
-
-	<style type="text/css">
-	
-#titulo {
-	display: flex;
-	justify-content: center;
-	font-family: Verdana, Geneva, sans-serif;
-	font-size: 36px;
-	font-weight: bold;
-	font-variant: normal;
-	color: #00DFA4;
-	text-transform: uppercase;
-	margin-bottom: 25px;
-	margin-top: 25px;
-}
-
-#pie {
-	display: flex;
-	justify-content: center;
-	padding: 0px;
-	height: auto;
-	width: 850px;
-	margin-top: 0px;
-	margin-bottom: 0px;
-	margin-right: auto;
-	margin-left: auto;
-	position: absolute;
-	left: 0%;
-	right: 0%;
-	bottom: 0px; 
-	margin-bottom: 25px;
-}
-
-#izquierda{
-	padding-top: 20px;
-	padding-right: 15px;
-	padding-bottom: 20px;
-	padding-left: 15px;
-	background-color: #F7F0F0;
-	border: 3px solid black;
-	float: left;
-	margin-left: 25px;
-	border-radius: 10px;	
-}
-
-#centro{
-	text-align: center;
-	border-radius: 10px;
-	width: 1000px;
-	background-color: #F7F0F0;
-	border: 3px solid black;
-	padding-top: 20px;
-	padding-bottom: 20px;
-  	margin-left: auto;
-  	margin-right: auto;
-}
-	
-#cerrar{
-	padding: 5px;
-	background-color: #F7F0F0;
-	border: 3px solid black;
-	float: right;
-	margin-right: 25px;
-	margin-top: 25px;
-	border-radius: 10px;
-}
-
-#inicio{
-	padding: 5px;
-	background-color: #F7F0F0;
-	border: 3px solid black;
-	float: left;
-	margin-left: 25px;
-	margin-top: 25px;
-	border-radius: 10px;
-}
-#izquierdaCentro{
-	margin-left: 25px;
-	text-align: left;
-}
-
-</style>
+	<title>Expediente</title>
+	<h:outputStylesheet library="css" name="Layout.css"/>
 </h:head>
 
 <h:body>
-	
-	<div id="inicio">
-		<input type="submit" name="leerEncuesta" value="INICIO"/>
-	</div>
-	
-	<div id="cerrar">
-		<input type="submit" name="leerEncuesta" value="Cerrar sesion"/>
+
+	<h:commandButton styleClass="inicio" value="INICIO" action="LeerAlumnos.xhtml"/>
+	<h:commandButton styleClass="cerrar" value="Cerrar sesion" action="LeerAlumnos.xhtml"/>
+
+	<h1 class="titulo"> FLM-SECRETARIA </h1>
+
+	<div class="izquierda">
+		<b>MIS DATOS </b><br></br><br></br> 
+		<br></br> <a href="#" style="text-decoration: none">Leer Encuesta</a><br></br>
+		<a href="#" style="text-decoration: none">Leer Asignatura Matricula</a><br></br>
+		<a href="#" style="text-decoration: none">Leer Matricula</a><br></br> 
+		<a href="#" style="text-decoration: none">Leer Titulacion</a><br></br> 
+		<a href="#" style="text-decoration: none">Leer Usuario</a><br></br> 
+		<a href="#" style="text-decoration: none">Leer Asignatura</a><br></br> 
+		<a href="#" style="text-decoration: none">Leer Clase</a><br></br> 
+		<a href="#" style="text-decoration: none">Leer Expediente</a>
 	</div>
 
-	<h:h1 id="titulo"> FLM-SECRETARIA </h:h1>
-
-	
-	<div id="centro">
-		<div id="izquierdaCentro">
-		 <b>Titulación: </b>
-		 </div>
-		 <div >
-		 
-		 <c:choose>
-            <c:when test="#{empty infoSesion.usuario}">
-                <p>No tiene autorización para ver esta página, debe autenticarse antes.</p>
-            </c:when>
-            <c:otherwise>
-                <h:form id="contactos">
-                    <h:dataTable value="#{infoSesion.contactos}" var="c">
-                        <h:column>
+	<div class="centro">
+		<div class="centroIzquierda">
+			<b>Expediente: </b>
+			<br></br>
+		</div>
+		<div>
+			<h:form id="alumnos">
+				<h:dataTable value="#{AlumnoBB.listaAlumno()}" var="a">
+					<h:column>
                             <f:facet name="header">Codigo  </f:facet>
                             <h:outputText value="#{c.codigo}"/>
                         </h:column>
@@ -131,19 +51,12 @@
                             <f:facet name="header">  Creditos</f:facet>
                             <h:outputText value="#{c.creditos}"/>
                         </h:column>
-                        
-                   
-                   </h:dataTable>
-                </h:form>
-            </c:otherwise>
-        </c:choose>
-		 
-		 </div>
-	</div>
-
-	<div id="pie"> 
-		Universidad de Málaga · Avda. Cervantes, 2. 29071 MÁLAGA · Tel. 952131000 · info@uma.es	
+				</h:dataTable>
+			</h:form>
+		</div>
 	</div>
 	
+	<div class="pie"> Universidad de Málaga · Avda. Cervantes, 2. 29071 MÁLAGA · Tel. 952131000 · info@uma.es </div>
+
 </h:body>
 </html>
