--- a/Grupo_L-war/src/main/webapp/index.xhtml
+++ b/Grupo_L-war/src/main/webapp/index.xhtml
@@ -12,12 +12,12 @@
 </h:head>
 
 <h:body>
-	<h:commandButton styleClass="cerrar" value="Cerrar sesion" action="LeerAlumnos.xhtml"/>
 
 	<h1 class="titulo"> FLM-SECRETARIA </h1>
 	
 	<div class="centro">
 		<h1> BIENVENIDO </h1>
+		<h:commandButton value="Iniciar Sesion" action="Login.xhtml"/>
 	</div>
 
 	<div class="pie"> 
