--- a/Grupo_L-war/src/main/webapp/index.xhtml
+++ b/Grupo_L-war/src/main/webapp/index.xhtml
@@ -17,7 +17,7 @@
 	
 	<div class="centro">
 		<h1> BIENVENIDO </h1>
-		<h:commandButton value="Iniciar Sesion" action="Login.xhtml"/>
+		<h:button value="Iniciar sesion" outcome="Login.xhtml"/>
 	</div>
 
 	<div class="pie"> 
