--- a/Grupo_L-war/src/main/webapp/LeerAlumnos.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerAlumnos.xhtml
@@ -13,21 +13,21 @@
 
 <h:body>
 
-	<h:commandButton styleClass="inicio" value="INICIO" action="LeerAlumnos.xhtml"/>
-	<h:commandButton styleClass="cerrar" value="Cerrar sesion" action="LeerAlumnos.xhtml"/>
+	<div class="cerrar"> <h:button value="Cerrar sesion" outcome="index.xhtml" /> </div>
+	<div class="inicio"> <h:button value="INICIO" outcome="Principal.xhtml" /> </div>
 
-	<h1 class="titulo"> FLM-SECRETARIA </h1>
+	<h1 class="titulo"> Alumnos </h1>
 
 	<div class="izquierda">
 		<b>MIS DATOS </b><br></br><br></br> 
 		<a href="#" style="text-decoration: none">Leer Encuesta</a><br></br>
 		<a href="#" style="text-decoration: none">Leer Asignatura Matricula</a><br></br>
-		<a href="#" style="text-decoration: none">Leer Matricula</a><br></br> 
-		<a href="#" style="text-decoration: none">Leer Titulacion</a><br></br> 
-		<a href="#" style="text-decoration: none">Leer Usuario</a><br></br> 
-		<a href="#" style="text-decoration: none">Leer Asignatura</a><br></br> 
+		<a href="LeerMatricula.xhtml" style="text-decoration: none">Leer Matricula</a><br></br> 
+		<a href="LeerTitulacion.xhtml" style="text-decoration: none">Leer Titulacion</a><br></br> 
+		<a href="LeerAlumnos.xhtml" style="text-decoration: none">Leer Usuario</a><br></br> 
+		<a href="LeerAsignaturas.xhtml" style="text-decoration: none">Leer Asignatura</a><br></br> 
 		<a href="#" style="text-decoration: none">Leer Clase</a><br></br> 
-		<a href="#" style="text-decoration: none">Leer Expediente</a>
+		<a href="LeerExpediente.xhtml" style="text-decoration: none">Leer Expediente</a>
 	</div>
 
 	<div class="centro">
