--- a/Grupo_L-war/src/main/webapp/index.xhtml
+++ b/Grupo_L-war/src/main/webapp/index.xhtml
@@ -9,13 +9,14 @@
 <h:head>
 	<title>FLM SECRETARIA</title>
 	<h:outputStylesheet library="css" name="Layout.css"  />
+	<h:outputStylesheet library="css" name="Estilos.css" />
 </h:head>
 
 <h:body>
 
 	<h1 class="titulo"> FLM-SECRETARIA </h1>
 	
-	<div class="centro">
+	<div class="centrado">
 		<h1> BIENVENIDO </h1>
 		<h:button value="Iniciar sesion" outcome="Login.xhtml"/>
 	</div>
