--- a/Grupo_L-war/src/main/webapp/LeerAlumnos.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerAlumnos.xhtml
@@ -12,11 +12,11 @@
 </h:head>
 
 <h:body>
-
-	<div class="cerrar"> <h:button value="Cerrar sesion" outcome="index.xhtml" /> </div>
+	
 	<div class="inicio"> <h:button value="INICIO" outcome="Principal.xhtml" /> </div>
-
-	<h1 class="titulo"> Alumnos </h1>
+	<div class="cerrar"> <h:button value="Cerrar sesion" outcome="index.xhtml" /> </div>
+	
+	<h1 class="titulo"> FLM-SECRETARIA </h1>
 
 	<div class="izquierda">
 		<b>MIS DATOS </b><br></br><br></br> 
