Modificacion de locos un 10

--- a/Grupo_L-war/src/main/webapp/ExportarDatos.xhtml
+++ b/Grupo_L-war/src/main/webapp/ExportarDatos.xhtml
@@ -21,7 +21,7 @@
 	<div class="Exportar">
 		<b>Exportar Datos</b> <br></br><br></br>
 		
-		<select class="so" name="so">
+		<select class="centro" name="so">
 	 		 <option value="" selected="selected">Titulaciones</option>
 			 <option value="1041">Ingeniería Informática</option>
 			 <option value="1042">Ingeniería del Software</option>
