--- a/Grupo_L-war/src/main/webapp/ImportarAsignatura.xhtml
+++ b/Grupo_L-war/src/main/webapp/ImportarAsignatura.xhtml
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	 xmlns:p="http://primefaces.org/ui">
 
 <h:head>
 	<title>Importar Asignatura</title>
@@ -20,6 +21,15 @@
 	
 	
 	<div class="centro">
+	
+	<div class="card">
+    <h:form>
+      		  <p:fileUpload listener="#{fileUploadView.handleFileUpload}" mode="advanced" dragDropSupport="true" update="messages" sizeLimit="100000" allowTypes="/(\.|\/)(csv|xls)$/"/>
+
+       		 <p:growl id="messages" showDetail="true"/>
+    		</h:form>
+		</div>
+	
 		<input type="submit" name="leerEncuesta" value="Cancelar"/>
 		<input type="submit" name="leerEncuesta" value="Aceptar"/>
 	</div>
