vista importar horario

--- a/Grupo_L-war/src/main/webapp/ImportarHorario.xhtml
+++ b/Grupo_L-war/src/main/webapp/ImportarHorario.xhtml
@@ -9,14 +9,13 @@
 <h:head>
 	<title>IMPORTAR HORARIO</title>
 	<h:outputStylesheet library="css" name="Layout.css"/>
-	<h:outputStylesheet library="css" name="Estilos.css"/>
 </h:head>
 
 <h:body>
 
 	<div class="cerrar"> <h:button value="Cerrar sesion" outcome="index.xhtml" /> </div>
 	<div class="inicio"> <h:button value="INICIO" outcome="Principal.xhtml" /> </div>
-	<div class= "hola"> <p>Hola, <h:outputText value="#{infoSesion.usuario.nombre}"/>.</p></div>
+	<div> <p>Hola, <h:outputText value="#{infoSesion.usuario.nombre}"/>.</p></div>
 
 	<h1 class="titulo"> Importar horario </h1>
 
