--- a/Grupo_L-war/src/main/webapp/Login.xhtml
+++ b/Grupo_L-war/src/main/webapp/Login.xhtml
@@ -24,19 +24,20 @@
 			<h:panelGrid columns="3">
 				<h:outputText value="Nombre de usuario:" />
 				<h:inputText id="user" required="true"
-					value="#{login.usuario.cuenta}" />
+					value="#{LoginBB.usuario.Email_Institucional}" />
 				<h:message for="user" />
 
 				<h:outputText value="Contraseña:" />
 				<h:inputSecret id="pass" required="true"
-					value="#{login.usuario.contrasenia}" />
+					value="#{LoginBB.usuario.contraseña}" />
 				<h:message for="pass" />
 
-				<h:button value="Entrar" outcome="Principal.xhtml" /> 
+				<h:commandButton value="Entrar" action="#{LoginBB.entrar()}" /> 
+				
+				<a href="GenerarNuevaContrasena.xhtml">¿Has olvidado tu contraseña?</a>
 
 			</h:panelGrid>
-			<a href="GenerarNuevaContrasena.xhtml">¿Has olvidado tu
-				contraseña?</a>
+			
 		</h:form>
 	</div>
 
