--- a/Grupo_L-war/src/main/webapp/Principal.xhtml
+++ b/Grupo_L-war/src/main/webapp/Principal.xhtml
@@ -9,6 +9,7 @@
 <h:head>
 	<title>FLM SECRETARIA</title>
 	<h:outputStylesheet library="css" name="Layout.css"  />
+	<h:outputStylesheet library="css" name="Estilos.css"  />
 </h:head>
 
 <h:body>
@@ -17,22 +18,40 @@
 	
 	<h1 class="titulo"> Principal </h1>
 
-	<div class="izquierda">
-		<b>MIS DATOS </b><br></br><br></br> 
-		<a href="#" style="text-decoration: none">Leer Encuesta</a><br></br>
-		<a href="#" style="text-decoration: none">Leer Asignatura Matricula</a><br></br>
-		<a href="LeerMatricula.xhtml" style="text-decoration: none">Leer Matricula</a><br></br> 
-		<a href="LeerTitulacion.xhtml" style="text-decoration: none">Leer Titulacion</a><br></br> 
-		<a href="LeerAlumnos.xhtml" style="text-decoration: none">Leer Usuario</a><br></br> 
-		<a href="LeerAsignaturas.xhtml" style="text-decoration: none">Leer Asignatura</a><br></br> 
-		<a href="#" style="text-decoration: none">Leer Clase</a><br></br> 
-		<a href="LeerExpediente.xhtml" style="text-decoration: none">Leer Expediente</a>
-	</div>
+	<ui:fragment rendered="#{InfoSension.alumno != null eq true}">
+		<div class="izquierda"   >
+			<b>MIS DATOS </b><br></br><br></br> 
+			<a href="#" style="text-decoration: none">Leer Encuesta</a><br></br>
+			<a href="#" style="text-decoration: none">Leer Asignatura Matricula</a><br></br>
+			<a href="LeerMatricula.xhtml" style="text-decoration: none">Leer Matricula</a><br></br> 
+			<a href="LeerTitulacion.xhtml" style="text-decoration: none">Leer Titulacion</a><br></br> 
+			<a href="LeerAlumnos.xhtml" style="text-decoration: none">Leer Usuario</a><br></br> 
+			<a href="LeerAsignaturas.xhtml" style="text-decoration: none">Leer Asignatura</a><br></br> 
+			<a href="#" style="text-decoration: none">Leer Clase</a><br></br> 
+			<a href="LeerExpediente.xhtml" style="text-decoration: none">Leer Expediente</a>
+		</div>
+	
 	
 	<div class="centro">
 		<h:button value="Rellenar encuesta" outcome="index.xhtml" /> <br></br><br></br>
 		<h:button value="Solicitar cambio de grupo" outcome="index.xhtml" />
 	</div>
+	</ui:fragment>
+	
+	<ui:fragment rendered="#{InfoSension.personal != null eq true}">			
+		<div class="centrado" >
+			<h:button value="Alumnos" outcome="index.xhtml" /> <br></br><br></br>
+			<h:button value="Matricula" outcome="index.xhtml" /> <br></br><br></br>
+			<h:button value="Grupos" outcome="index.xhtml" /> <br></br><br></br>
+			<h:button value="Expediente" outcome="index.xhtml" /> <br></br><br></br>
+			<h:button value="Titulacion" outcome="index.xhtml" /> <br></br><br></br>
+			<h:button value="Encuesta" outcome="index.xhtml" /> <br></br><br></br>
+			<h:button value="Asignaturas" outcome="index.xhtml" /> <br></br><br></br>
+			<h:button value="Centro" outcome="index.xhtml" /> <br></br><br></br>
+			<h:button value="Asignatura-Matricula" outcome="index.xhtml" />
+		</div>
+	</ui:fragment>
+	
 
 	<div class="pie"> 
 		Universidad de Málaga · Avda. Cervantes, 2. 29071 MÁLAGA · Tel. 952131000 · info@uma.es	
