--- a/Grupo_L-war/src/main/webapp/Login.xhtml
+++ b/Grupo_L-war/src/main/webapp/Login.xhtml
@@ -1,3 +1,4 @@
+<?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
@@ -24,15 +25,15 @@
 			<h:panelGrid columns="3">
 				<h:outputText value="Nombre de usuario:" />
 				<h:inputText id="user" required="true"
-					value="#{LoginBB.usuario.Email_Institucional}" />
+					value="#{loginBB.usuario.email_Institucional}" />
 				<h:message for="user" />
 
 				<h:outputText value="Contraseña:" />
 				<h:inputSecret id="pass" required="true"
-					value="#{LoginBB.usuario.contraseña}" />
+					value="#{loginBB.usuario.contraseña}" />
 				<h:message for="pass" />
 
-				<h:commandButton value="Entrar" action="#{LoginBB.entrar()}" /> 
+				<h:commandButton value="Entrar" action="#{loginBB.entrar()}" /> 
 				
 				<a href="GenerarNuevaContrasena.xhtml">¿Has olvidado tu contraseña?</a>
 
