--- a/Grupo_L-war/src/main/webapp/ExportarDatos.xhtml
+++ b/Grupo_L-war/src/main/webapp/ExportarDatos.xhtml
@@ -22,7 +22,7 @@
 	<div class="centrado">
 		<b>Exportar Datos</b> <br></br><br></br>
 		
-		<select class="centro" name="so">
+		<select name="so">
 	 		 <option value="" selected="selected">Titulaciones</option>
 			 <option value="1041">Ingeniería Informática</option>
 			 <option value="1042">Ingeniería del Software</option>
